--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,25 @@
-.banner {
-	background-color: #233237; 
-	color: white; 
+.main-banner {
+	background-color: #233237;
+	width: 100%;
 	height: 270px;
+}
+
+.banner{
+	color: white; 
+	padding-left: 8%;
+	padding-top: 10%;
+	font-family: 'Aldrich', sans-serif;
+	letter-spacing: -1px;
+	position: absolute;
+}
+
+.banner-name{
+	color: white; 
 	padding-top: 5%;
 	padding-left: 8%;
 	font-family: 'Aldrich', sans-serif;
 	letter-spacing: -1px;
+	position: absolute;
 }
 
 .banner a {
@@ -70,4 +84,17 @@ h2 {
 	font-weight: 700;
 	font-family: 'Armata', sans-serif; 
 	color:#000;
+}
+
+canvas {
+	display:fixed;
+	position: fixed;
+}
+
+#particles-js {
+	width: 100%;
+	height: 270px;
+	top: 0;
+	left: 0;
+	background-color: #233237;
 }
