--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,21 @@
+@media only screen and (max-width: 700px) {
+  .main-banner .name {
+  	margin-top: 5%;
+	font-weight: 700; 
+	font-size: 40px;
+  }
+
+}
+
 .main-banner {
 	background-color: #233237;
 	width: 100%;
-	height: 270px;
 }
 
 .banner{
 	color: white; 
-	padding-left: 8%;
-	padding-top: 10%;
 	font-family: 'Aldrich', sans-serif;
 	letter-spacing: -1px;
-	position: absolute;
 }
 
 .banner-name{
