--- a/css/styles.css
+++ b/css/styles.css
@@ -6075,7 +6075,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #bd5d38 !important;
+  background-color: #283747 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -9777,11 +9777,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #bd5d38 !important;
+  color: #932432 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #824027 !important;
+  color: #932432 !important;
 }
 
 .text-secondary {
